--- a/week04/bio/bio4.html
+++ b/week04/bio/bio4.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Biography</title>
-        <link rel="stylesheet" type="text/css" href="biostyle4.css">
+        <link rel="stylesheet" type="text/css" href="biostyle.css">
     </head>
 
     <body>
