--- a/week04/bio/bio1.html
+++ b/week04/bio/bio1.html
@@ -8,11 +8,11 @@
     <body>
         <h1 class="thePosition">Biography</h1>
         <div class="fixed">
-         <a href = "../index.html"><button>Home Page</button></a>
+         <a href = "../Homepage_designworks/homepage.html"><button>Home Page</button></a>
          <br>
          <a href = "bio1.html"><button style="color:grey;">Biography</button></a>
          <br>
-         <a href = "CHANGE HERE"><button>Design Works</button></a>
+         <a href = "../Homepage_designworks/design_work.html"><button>Design Works</button></a>
          <br>
          <a href = "../clients/clients.html"><button>Clients</button></a>
         </div> 
