--- a/week04/bio/bio2.html
+++ b/week04/bio/bio2.html
@@ -14,7 +14,7 @@
          <br>
          <a href = "../Homepage_designworks/design_work.html"><button>Design Works</button></a>
          <br>
-         <a href = "../clients/clients.html"><button>Clients</button></a>
+         <a href = "../clients/clients.html"><button>Citation</button></a>
         </div> 
         <h2 class="thePosition"><img src="David Surfing.jpg" title="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.davidairey.com%2Fdavid-carson-all-for-a-few-good-waves&psig=AOvVaw2Qglx2bYgRAJoJzappxKiO&ust=1601232198019000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCLDbw_W8h-wCFQAAAAAdAAAAABAD" width=900px>  
          <p class="style">
